appId: com.ghostheart.chronospark
---
- launchApp
- runFlow: _login_if_needed.yaml

- assertVisible: "Quick actions"
- tapOn: "Creator"
- assertVisible: "Creator"

- tapOn: "Goals"
- tapOn: "Item title *"
- eraseText
- inputText: "Lose Weight"

- tapOn: "Create goal"
- assertVisible: "REVIEW TIMELINE"
