appId: ${APP_ID}
---
- runFlow: ../_common/open_navigation_map.yaml
- tapOn:
    id: "nav-nexus"
- scrollUntilVisible:
    element:
      id: "nexus-action-si-console"
    direction: DOWN
    timeout: 30000
- tapOn:
    id: "nexus-action-si-console"
- assertVisible:
    id: "screen-si-console"
