appId: ${APP_ID}
---
- runFlow: ../_common/go_to_nexus.yaml
- scrollUntilVisible:
    element:
      text: "Trajectory"
    direction: DOWN
    timeout: 30000
- tapOn:
    text: "Trajectory"
- assertVisible:
    text: "Future Forecast"
