appId: ${APP_ID}
---
- runFlow: ../authentication/login_with_env.yaml
- runFlow: ../_common/go_to_creator.yaml
- tapOn:
    text: "Goal"
- tapOn:
    id: "creator-title-input"
- inputText: "Maestro Goal"
- hideKeyboard
- scrollUntilVisible:
    element:
      text: "Create item"
    direction: DOWN
    timeout: 30000
- tapOn:
    id: "creator-submit"
- assertVisible: "Goal saved."
