appId: ${APP_ID}
---
- runFlow: ../authentication/login_with_env.yaml
- runFlow: ../_common/go_to_creator.yaml
- tapOn:
    text: "Note"
- tapOn:
    id: "creator-title-input"
- inputText: "Maestro Note"
- hideKeyboard
- tapOn:
    id: "creator-detail-input"
- inputText: "Note body from maestro"
- hideKeyboard
- scrollUntilVisible:
    element:
      text: "Create item"
    direction: DOWN
    timeout: 30000
- tapOn:
    id: "creator-submit"
- assertVisible: "Note saved."
