appId: ${APP_ID}
---
- runFlow: ../authentication/login_with_env.yaml
- runFlow: ../_common/go_to_creator.yaml
- tapOn:
    id: "creator-title-input"
- inputText: "Maestro Task"
- hideKeyboard
- tapOn:
    id: "creator-detail-input"
- inputText: "Created by the Maestro Creator suite"
- hideKeyboard
- tapOn: "Every day"
- scrollUntilVisible:
    element:
      text: "Create item"
    direction: DOWN
    timeout: 30000
- tapOn:
    id: "creator-submit"
- assertVisible: "Task saved."
