appId: ${APP_ID}
---
- launchApp:
    clearState: true
    stopApp: true
- extendedWaitUntil:
    visible:
      id: "onboarding-next"
    timeout: 60000
- tapOn:
    id: "onboarding-next"
- stopApp
- launchApp:
    clearState: false
    stopApp: true
- extendedWaitUntil:
    visible:
      id: "onboarding-start-setup"
    timeout: 60000
