appId: ${APP_ID}
---
- launchApp:
    clearState: true
    stopApp: true
- extendedWaitUntil:
    visible:
      id: "screen-onboarding"
    timeout: 60000
- tapOn:
    id: "onboarding-skip"
- extendedWaitUntil:
    visible:
      id: "login-email-field"
    timeout: 60000
