appId: ${APP_ID}
---
- runFlow: settings_open.yaml
- tapOn:
    id: "settings_dark_mode_toggle"
    optional: true
- tapOn:
    text: "Audio effects"
    optional: true
- tapOn:
    text: "Haptic feedback"
    optional: true
- stopApp
- launchApp:
    clearState: false
    stopApp: true
- runFlow: ../_common/go_to_settings.yaml
- assertVisible:
    id: "screen-settings"
