appId: ${APP_ID}
---
- runFlow: settings_open.yaml
- scrollUntilVisible:
    element:
      id: "settings-reflection-reminder-toggle"
    direction: DOWN
    timeout: 30000
- runFlow:
    when:
      notVisible:
        id: "settings-reflection-reminder-time"
    commands:
      - tapOn:
          id: "settings-reflection-reminder-toggle"
      - tapOn:
          text: "Allow"
- extendedWaitUntil:
    visible:
      id: "settings-reflection-reminder-time"
    timeout: 30000
- stopApp
- launchApp:
    clearState: false
    stopApp: true
- runFlow: ../_common/go_to_settings.yaml
- scrollUntilVisible:
    element:
      id: "settings-reflection-reminder-time"
    direction: DOWN
    timeout: 30000
- assertVisible:
    id: "settings-reflection-reminder-time"
