appId: ${APP_ID}
---
- runFlow: si_console_open.yaml
- tapOn:
    id: "si-console-input"
- eraseText
- inputText: "../../../../ ;;; ::: ???"
- hideKeyboard
- tapOn:
    id: "si-console-send"
- assertNotVisible: "Something went wrong"
