appId: ${APP_ID}
---
- runFlow: si_console_open.yaml
- tapOn:
    id: "si-console-input"
- eraseText
- hideKeyboard
- tapOn:
    id: "si-console-send"
- assertVisible:
    id: "si-console-input"
- assertNotVisible: "Something went wrong"
