appId: ${APP_ID}
---
- runFlow: timeline_load.yaml
- tapOn: "Search timeline..."
- inputText: "task"
- eraseText
- hideKeyboard
- swipe:
    start: 50%, 20%
    end: 50%, 75%
    duration: 600
